Project

General

Profile

Actions

Bug #24211

closed

SharedBlob::put() racy

Added by Sage Weil almost 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

There is a narrow race possible:

A: lookup foo
A: put on foo
A: foo --nref 0
B: lookup foo
B: put foo
B: foo --nref 0
B: try_remove() succeeds, removes
A: try_remove() tries to remove foo again, probably crashes


Related issues 3 (0 open3 closed)

Related to bluestore - Bug #24715: FAILED assert(0 == "put on missing extent (nothing before)")Duplicate06/29/2018

Actions
Copied to bluestore - Backport #24247: luminous: SharedBlob::put() racyResolvedPrashant DActions
Copied to bluestore - Backport #24248: mimic: SharedBlob::put() racyResolvedKefu ChaiActions
Actions #1

Updated by Sage Weil almost 6 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Kefu Chai almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 6 years ago

Actions #5

Updated by Nathan Cutler almost 6 years ago

Actions #6

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions #7

Updated by Radoslaw Zarzynski over 5 years ago

  • Related to Bug #24715: FAILED assert(0 == "put on missing extent (nothing before)") added
Actions

Also available in: Atom PDF